# personal-branding

./: .gitignore  CLAUDE.md  PERSONALBRAND.md  README.md  batch_generate.py  gen_one_node.py  migrate_backfill_processed.py  package-lock.json  reel_scripts_batch_01.md  reel_scripts_batch_02.md  start.sh
.claude/: launch.json  settings.json  settings.local.json
Ideas Draft/: main.py  pyproject.toml  repository.py
NOTION DIARY FETCHER/: .env.example  .gitignore  CLAUDE.md  README.md  config.toml  main.py  package-lock.json  pyproject.toml
NOTION DIARY FETCHER/.claude/: settings.local.json
NOTION DIARY FETCHER/api/: main.py  reel_routes.py
NOTION DIARY FETCHER/handoff/: blueprint_v1.0_p1_spec-scaffold.md  blueprint_v1.0_p2_client.md  blueprint_v1.0_p3_database.md  blueprint_v1.0_p4_sync-chunker-dod.md  blueprint_v1.1_p1_api.md  blueprint_v1.1_p2_react.md
NOTION DIARY FETCHER/md/: checkpoint.md
NOTION DIARY FETCHER/src/notion_fetcher/: client.py  database.py
NOTION DIARY FETCHER/ui/: index.html
NOTION DIARY FETCHER/ui/src/: App.jsx  api.js
_archive/: TASKS.md  content_writer_llm_client_ollama.py
brandguide/: brandbook.md  content_strategy_log.md  content_workflow.md  linkedin.md  production_playbook.md  reference_analysis_reference1.md  voice_dna.md  voice_dna_block.txt
config/: openrouter_models.yaml
content_writer/: IMPLEMENTATION_LOG.md  api_routes.py  db.py  models.py  prompt_builder.py  recommender.py  repository.py  service.py
deploy/: com.pbs.backup-pull.plist  pbs-api.service  pbs-nightly.service  pbs-nightly.sh  pbs-nightly.timer  pull_vm_backup.sh
frameworks/: api_routes.py  picker.py
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js
handoff/: blueprint_v1.0_openrouter.md  blueprint_v1.1_instagram_reels.md  blueprint_v1.6_frontend_redesign.md  blueprint_v1.7_sync_button.md  blueprint_v2.2_openrouter_routing.md  blueprint_v2.4_frontend_ux.md  blueprint_v2.6_content_lifecycle.md  blueprint_v2.7_ideas_voice.md  blueprint_v3.0_pbs_reboot.md  blueprint_v3.1_qa_queue_and_picker.md  blueprint_v3.2_notion_ideas_sync.md  insight_helper_workflow.md  (+5 more)
(+189 files in other folders)
