[project]
name = "notion-fetcher"
version = "0.1.0"
description = "Fetches Notion diary database and stores in SQLite"
requires-python = ">=3.12"
dependencies = [
    "notion-client==2.2.1",
    "python-dotenv>=1.0.0",
]

[project.scripts]
sync = "notion_fetcher.sync:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_fetcher"]