[project]
name = "notion-fetcher"
version = "0.1.0"
description = "Fetches Notion diary database and stores in SQLite"
requires-python = ">=3.12"
dependencies = [
    "notion-client==2.2.1",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pyyaml>=6.0.3",
    "httpx>=0.28.1",
    "shared",
    "openai>=2.38.0",
]

[project.optional-dependencies]
# Local-only MP4 framework extraction (frameworks/instagram_frameworks/extract_reel.py).
# Not installed on the VM — torch/CUDA won't fit the e2-micro disk.
extraction = [
    "openai-whisper>=20250625",
    "scenedetect[opencv]>=0.6.7.1",
]

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_fetcher"]
